# TM-Template

./: README.md  apps.yaml  sdkconfig.defaults
.github/workflows/: build.yml
apps/app_skeleton/: CMakeLists.txt  app_skeleton.c
docs/: APP_API.md
docs/agents/: CONTEXT.md
docs/agents/skills/: add-an-app.md  onboarding-and-ota.md
